Updating projects section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="picture-section">
           <div class="picture-container">
-            <img class="portrait" src="portrait.jpg">
+            <img class="portrait" src="portrait.png">
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
               <h1>Mock Trading App</h1>
             </div>
             <div class="item_content">
-              <div class="project_skills">
+              <div class="project_image">
                 <h3>Tech Stack:</h3>
                 <ul>
                   <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/python.svg"></li>
@@ -192,7 +192,31 @@
                   <li><img src="https://raw.githubusercontent.com/get-icon/geticon/fc0f660daee147afb4a56c64e12bde6486b73e39/icons/jquery.svg"></li>
               </div>
               <div class="project_description">
-                <p>Used Flask to create a mock trading account web app. The app first prompts the user to create an account. Once logged in, the user is gifted an imaginary $10,000 with which to "buy" and "sell" stocks. Live stock prices are used by querying the IEX API. From their account, the user can manage their portfolio, review their transaction history, or deposit more imaginary currency.</p>
+                <ul>
+                  <li>A mock stock trading app that facilitates the buying/selling of stocks. Built with <b>Python</b> and <b>SQLite</b>.</li>
+                  <li>Live stock data provided by the <b>IEX API.</b></li>
+                  <li><b>Bootstrap</b> and <b>Jinja templates</b> were used to style the application.</li>
+                  <li><a src="https://github.com/harrycs1/Weather-App">Link to GitHub</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item_title">
+              <h1>Weather App</h1>
+            </div>
+            <div class="item_content">
+              <div class="project_image">
+                <img class="appImage" src="weatherApp.png">
+                <h4>Read More</h4>
+              </div>
+              <div class="project_description">
+                <ul>
+                  <li>A custom weather app that shows weather data of the searched location. Built with <b>JavaScript</b>, <b>HTML</b>, and <b>CSS</b>.</li>
+                  <li>Weather data provided by the <b>OpenWeatherMap API.</b></li>
+                  <li>The <b>Geolocation API</b> allows the user to provide their current location without using the search function.</li>
+                  <li><a src="https://github.com/harrycs1/Weather-App">Link to GitHub</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -201,16 +225,35 @@
               <h1>Calculator App</h1>
             </div>
             <div class="item_content">
-              <div class="project_skills">
-                <h3>Tech Stack:</h3>
-                <ul>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/html-5.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/css-3.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/javascript.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/get-icon/geticon/fc0f660daee147afb4a56c64e12bde6486b73e39/icons/bootstrap.svg"></li>
+              <div class="project_image">
+                <img class="appImage" src="calculatorApp.png">
+                <h4>Read More</h4>
               </div>
               <div class="project_description">
-                <p>This was built in practice of vanilla JavaScript and DOM manipulation. The app easily handles arithmetic opertions and has all of the functionality of a generic calculator. I used event listener methods to call specific functions based on user input. An intuitive design was created by styling a familiar user interface using CSS Grid.</p>
+                <ul>
+                  <li>A custom calculator app that easily handles arithmetic operations. Built with <b>JavaScript</b>, <b>HTML</b>, and <b>CSS</b>.</li>
+                  <li>Event listener methods handle <b>DOM manipulation</b>.</li>
+                  <li>An intuitive design was created by styling a familiar user interface using <b>CSS Grid.</b></li>
+                  <li><a src="https://github.com/harrycs1/Calculator-App">Link to GitHub</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item_title">
+              <h1>Banking App</h1>
+            </div>
+            <div class="item_content">
+              <div class="project_image">
+                <img class="appImage" src="bankingApp.png">
+                <h4>Read More</h4>
+              </div>
+              <div class="project_description">
+                <ul>
+                  <li>A command-line bank management app that allows users to withdraw/deposit money, and shows transactional history. Built with <b>Java</b>.</li>
+                  <li>Applied <b>Object Oriented Programming (OOP)</b> principles to structure the program.</li>
+                  <li><a src="https://github.com/harrycs1/JavaBankingApp">Link to GitHub</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -219,15 +262,10 @@
               <h1>Portfolio</h1>
             </div>
             <div class="item_content">
-              <div class="project_skills">
-                <h3>Tech Stack:</h3>
-                <ul>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/html-5.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/css-3.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/jquery.svg"></li>
-              </div>
-              <div class="project_description">
-                <p>This entire website was built from scratch. In order to best learn the basics of web development, I decided not to use any frameworks or libraries, so anything you see on this page (good or not-so-good) was designed and built by me in vanilla CSS and HTML. Dynamic elements were created with JQuery.</p>
+              <div class="project_description" id="portfolioDescription">
+                <p>This entire website was built from scratch, by me. In order to best learn the basics of web development, I decided not to use any frameworks and so anything you see on this page (good or not-so-good) was designed and built in HTML and vanilla CSS. Dynamic elements were created with JavaScript and JQuery.</p>
+                <br>
+                <p>If you would like to leave any comments or have any suggestions for this website, please message me from the form located at the bottom of this page. Thanks!</p>
               </div>
             </div>
           </div>
@@ -247,14 +285,18 @@
               </div>
               <div class="socials">
                 <a href="https://www.linkedin.com/in/harrydaniels1/" target="_blank" rel="noreferrer">
-              <svg xmlns="http://www.w3.org/2000/svg" role="img" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
-                <title> LinkedIn </title>
-                <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-                <circle cx="4" cy="4" r="2"></circle>
-                <rect x="2" y="9" width="4" height="12"></rect>
-              </svg>
-            </a>
-                <a href="https://codepen.io/harrycs" aria-label="Codepen" target="_blank" rel="noreferrer"><svg xmlns="http://www.w3.org/2000/svg" role="img"  width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-codepen"><title>CodePen</title><polygon points="12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2"></polygon><line x1="12" y1="22" x2="12" y2="15.5"></line><polyline points="22 8.5 12 15.5 2 8.5"></polyline><polyline points="2 15.5 12 8.5 22 15.5"></polyline><line x1="12" y1="2" x2="12" y2="8.5"></line></svg></a>
+                  <svg xmlns="http://www.w3.org/2000/svg" role="img" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+                  <title> LinkedIn </title>
+                  <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                  <circle cx="4" cy="4" r="2"></circle>
+                  <rect x="2" y="9" width="4" height="12"></rect></svg>
+                </a>
+                <a href="https://codepen.io/harrycs" aria-label="Codepen" target="_blank" rel="noreferrer">
+                  <svg xmlns="http://www.w3.org/2000/svg" role="img"  width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-codepen"><title>CodePen</title><polygon points="12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2"></polygon><line x1="12" y1="22" x2="12" y2="15.5"></line><polyline points="22 8.5 12 15.5 2 8.5"></polyline><polyline points="2 15.5 12 8.5 22 15.5"></polyline><line x1="12" y1="2" x2="12" y2="8.5"></line></svg>
+                </a>
+                <a href="https://github.com/harrycs1" target="_blank" rel="noreferrer">
+                  <svg id="githubLink" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                </a>
               </div>
             </div>
             <div class="screen-body-item">
