change portrait image

--- a/index.html
+++ b/index.html
@@ -104,18 +104,20 @@
           <p>Here are a few technologies I've been working with recently:</p>
           <ul class="skills">
             <li>C</li>
+            <li>Java</li>
             <li>Javascript</li>
-            <li>SQL</li>
+            <li>Python</li>
+            <li>SQLite</li>
             <li>HTML5</li>
             <li>CSS3</li>
             <li>Netlify</li>
-            <li>Python</li>
+            <li>React</li>
             <li>Jinja</li>
           </ul>
         </div>
         <div class="picture-section">
           <div class="picture-container">
-            <img class="portrait" src="portrait.png">
+            <img class="portrait" src="portrait.jpg">
           </div>
         </div>
       </div>
@@ -181,22 +183,15 @@
             </div>
             <div class="item_content">
               <div class="project_image">
-                <h3>Tech Stack:</h3>
-                <ul>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/python.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/flask.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/css-3.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/html-5.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/sqlite.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/patil-prajwal/Tech-Stack-Icons/661b1305f52d49de94f6640f8bbeec93dba9dc8a/Icons/javascript.svg"></li>
-                  <li><img src="https://raw.githubusercontent.com/get-icon/geticon/fc0f660daee147afb4a56c64e12bde6486b73e39/icons/jquery.svg"></li>
+                <img id="mockTradingAppImage" class="appImage" src="mockTradingApp.png">
+                <h4>Read More</h4>
               </div>
               <div class="project_description">
                 <ul>
                   <li>A mock stock trading app that facilitates the buying/selling of stocks. Built with <b>Python</b> and <b>SQLite</b>.</li>
                   <li>Live stock data provided by the <b>IEX API.</b></li>
                   <li><b>Bootstrap</b> and <b>Jinja templates</b> were used to style the application.</li>
-                  <li><a src="https://github.com/harrycs1/Weather-App">Link to GitHub</a></li>
+                  <li><a src="https://github.com/harrycs1/MockTradingApp">Link to GitHub</a></li>
                 </ul>
               </div>
             </div>
