fix links to github in projects section

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <li>A mock stock trading app that facilitates the buying/selling of stocks. Built with <b>Python</b> and <b>SQLite</b>.</li>
                   <li>Live stock data provided by the <b>IEX API.</b></li>
                   <li><b>Bootstrap</b> and <b>Jinja templates</b> were used to style the application.</li>
-                  <li><a src="https://github.com/harrycs1/MockTradingApp">Link to GitHub</a></li>
+                  <li><a href="https://github.com/harrycs1/MockTradingApp" target="_blank">Link to GitHub</a></li>
                 </ul>
               </div>
             </div>
@@ -210,7 +210,7 @@
                   <li>A custom weather app that shows weather data of the searched location. Built with <b>JavaScript</b>, <b>HTML</b>, and <b>CSS</b>.</li>
                   <li>Weather data provided by the <b>OpenWeatherMap API.</b></li>
                   <li>The <b>Geolocation API</b> allows the user to provide their current location without using the search function.</li>
-                  <li><a src="https://github.com/harrycs1/Weather-App">Link to GitHub</a></li>
+                  <li><a href="https://github.com/harrycs1/Weather-App" target="_blank">Link to GitHub</a></li>
                 </ul>
               </div>
             </div>
@@ -247,7 +247,7 @@
                 <ul>
                   <li>A command-line bank management app that allows users to withdraw/deposit money, and shows transactional history. Built with <b>Java</b>.</li>
                   <li>Applied <b>Object Oriented Programming (OOP)</b> principles to structure the program.</li>
-                  <li><a src="https://github.com/harrycs1/JavaBankingApp">Link to GitHub</a></li>
+                  <li><a href="https://github.com/harrycs1/JavaBankingApp" target="_blank">Link to GitHub</a></li>
                 </ul>
               </div>
             </div>
