--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <li>Engaged in collaborative projects and applied Paired Programming, debugging, and TDD, to optimise development.</li>
               </ul>
             </div>
-            <div data-tab="1" id="job1" class="tab-pane active">
+            <div data-tab="1" id="job1" class="tab-pane">
               <h3>Design Engineer <a href="https://calfordseaden.com" target="_blank">@ Calfordseaden</a></h3>
               <h4> Sep 2021 - Sep 2023 </h4>
               <ul>
